fixed: sTimeShift.css| removed redundant background-size values

--- a/style/timeShift.css
+++ b/style/timeShift.css
@@ -9,7 +9,6 @@ font-family: 'Trebuchet', sans-serif;
 height: 1536px;
 width: 1024px;
 background-image: url("images/time_shift_16.png");
-background-size: 1536px 1024px;
 background-repeat: no-repeat;
 background-position: center;
 background-size: cover;
